# Adriencoin

./: .gitignore  Adriencoin.sln  Adriencoin.vcxproj  Adriencoin.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  botToken.h  cache.cpp  cache.h  cmake_install.cmake  daily.cpp  daily.h  graph.cpp  graph.h  inventory.h  item.cpp  item.h  job.cpp  job.h  leaderboard.cpp  main.cpp  onEvent.cpp  onEvent.h  onReady.cpp  onReady.h  onSlashcommand.cpp  onSlashcommand.h  player.cpp  player.h  product.cpp  product.h  shop.cpp  shop.h  trade.cpp  trade.h  upgradeSave.cpp  upgradeSave.h
data/: mayors.json  shop.json  stock.json
playerdata/: 0.json  1005610643942015026.json  1010772606670086154.json  1015048200308129855.json  1129914778073178174.json  1150450266097848320.json  1244625534214737923.json  1252281077515554848.json  1252693724375547906.json  1339761558019903528.json  1339763152652472323.json  1358950784217251930.json  1372981964877070416.json  356268235697553409.json  488335709883727882.json  530082442967646230.json  816308613986648084.json  825433613541310526.json  839476703935856640.json  885637275118108682.json  894675187944022027.json  898739836184330280.json  933102136361893889.json  997967659809386636.json
src/: attributes.cpp  attributes.h  bank.cpp  bank.h  botToken.h  cache.cpp  cache.h  coop.cpp  coop.h  daily.cpp  daily.h  dungeon.cpp  dungeon.h  emoji.h  inventory.h  item.cpp  item.h  job.cpp  job.h  leaderboard.cpp  leaderboard.h  main.cpp  mayor.cpp  mayor.h  onEvent.cpp  onEvent.h  onReady.cpp  onReady.h  player.cpp  player.h  role.h  (+11 more)
(+1 files in other folders)
